# Bachelor_Work

./: README.md  main.py  openaq_location_282706_measurments.csv  pyproject.toml
DiplomaResults/: ventspils_parventa_location_map.html
